[gd_scene load_steps=14 format=3 uid="uid://bmmio2i8d54re"]

[ext_resource type="Script" path="res://UI.gd" id="1_0vxga"]
[ext_resource type="Texture2D" uid="uid://ctnevp2mir5ra" path="res://Sprites/dice1.png" id="2_xpruj"]
[ext_resource type="Texture2D" uid="uid://cajm41ghx3ywk" path="res://Sprites/dice2.png" id="3_u40ff"]
[ext_resource type="Texture2D" uid="uid://cud1pdk0m6kug" path="res://Sprites/dice3.png" id="4_gx2w2"]
[ext_resource type="Texture2D" uid="uid://bvldivbhggvy3" path="res://Sprites/dice4.png" id="5_copka"]
[ext_resource type="Texture2D" uid="uid://csjhew2hhmlsp" path="res://Sprites/dice5.png" id="6_dewjj"]
[ext_resource type="Texture2D" uid="uid://vixwo325hsro" path="res://Sprites/dice6.png" id="7_21hbo"]
[ext_resource type="Script" path="res://Dice.gd" id="8_aeu5n"]
[ext_resource type="Theme" uid="uid://b6i6gxb4x2mtc" path="res://UI.tres" id="9_joy0e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dx3p0"]
bg_color = Color(0, 0.329412, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5p6o"]
bg_color = Color(0.0941176, 0.458824, 0.670588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ntte"]
bg_color = Color(0.0352941, 0.156863, 0.478431, 1)

[sub_resource type="Theme" id="Theme_lm4wp"]
Button/colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
Button/font_sizes/font_size = 16
Button/styles/focus = null
Button/styles/hover = SubResource("StyleBoxFlat_dx3p0")
Button/styles/normal = SubResource("StyleBoxFlat_t5p6o")
Button/styles/pressed = SubResource("StyleBoxFlat_5ntte")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vxga")
dicesSprites = [ExtResource("2_xpruj"), ExtResource("3_u40ff"), ExtResource("4_gx2w2"), ExtResource("5_copka"), ExtResource("6_dewjj"), ExtResource("7_21hbo")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RollButton" type="Button" parent="CanvasLayer"]
offset_left = 60.0
offset_top = 840.0
offset_right = 260.0
offset_bottom = 1040.0
theme = SubResource("Theme_lm4wp")
theme_override_font_sizes/font_size = 50
text = "Roll"

[node name="DiceTemplate" type="TextureRect" parent="CanvasLayer"]
offset_left = -357.0
offset_top = 532.0
offset_right = -297.0
offset_bottom = 592.0
texture = ExtResource("2_xpruj")
script = ExtResource("8_aeu5n")

[node name="DiceHand" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="Dice1" type="TextureRect" parent="CanvasLayer/DiceHand"]
layout_mode = 0
offset_left = 330.0
offset_top = 950.0
offset_right = 390.0
offset_bottom = 1010.0
texture = ExtResource("2_xpruj")

[node name="Dice2" type="TextureRect" parent="CanvasLayer/DiceHand"]
layout_mode = 0
offset_left = 430.0
offset_top = 950.0
offset_right = 490.0
offset_bottom = 1010.0
texture = ExtResource("3_u40ff")

[node name="Dice3" type="TextureRect" parent="CanvasLayer/DiceHand"]
layout_mode = 0
offset_left = 530.0
offset_top = 950.0
offset_right = 590.0
offset_bottom = 1010.0
texture = ExtResource("4_gx2w2")

[node name="Dice4" type="TextureRect" parent="CanvasLayer/DiceHand"]
layout_mode = 0
offset_left = 630.0
offset_top = 950.0
offset_right = 690.0
offset_bottom = 1010.0
texture = ExtResource("5_copka")

[node name="Dice5" type="TextureRect" parent="CanvasLayer/DiceHand"]
layout_mode = 0
offset_left = 730.0
offset_top = 950.0
offset_right = 790.0
offset_bottom = 1010.0
texture = ExtResource("6_dewjj")

[node name="ValeurMain" type="Label" parent="CanvasLayer"]
offset_left = 1072.0
offset_top = 68.0
offset_right = 1398.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 40
text = "Main réelle : "

[node name="Grille" type="Label" parent="CanvasLayer"]
offset_left = 50.0
offset_top = 45.0
offset_right = 520.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 30
text = "Scores par coup :"

[node name="Relancer" type="Label" parent="CanvasLayer"]
offset_left = 330.0
offset_top = 850.0
offset_right = 481.0
offset_bottom = 910.0
theme_override_font_sizes/font_size = 40
text = "Relancer"

[node name="Garder" type="Label" parent="CanvasLayer"]
offset_left = 1330.0
offset_top = 850.0
offset_right = 1481.0
offset_bottom = 910.0
theme_override_font_sizes/font_size = 40
text = "Garder"

[node name="Coups" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 1050.0
offset_top = 175.0
offset_right = 1850.0
offset_bottom = 775.0

[node name="Total1" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 175.0
offset_bottom = 125.0
theme = ExtResource("9_joy0e")
text = "Total 1"

[node name="Total2" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 225.0
offset_top = 25.0
offset_right = 375.0
offset_bottom = 125.0
theme = ExtResource("9_joy0e")
text = "Total 2"

[node name="Total3" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 425.0
offset_top = 25.0
offset_right = 575.0
offset_bottom = 125.0
theme = ExtResource("9_joy0e")
text = "Total 3
"

[node name="Total4" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 625.0
offset_top = 25.0
offset_right = 775.0
offset_bottom = 125.0
theme = ExtResource("9_joy0e")
text = "Total 4
"

[node name="Total5" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 25.0
offset_top = 175.0
offset_right = 175.0
offset_bottom = 275.0
theme = ExtResource("9_joy0e")
text = "Total 5"

[node name="Total6" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 225.0
offset_top = 175.0
offset_right = 375.0
offset_bottom = 275.0
theme = ExtResource("9_joy0e")
text = "Total 6"

[node name="Brelan" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 425.0
offset_top = 175.0
offset_right = 575.0
offset_bottom = 275.0
theme = ExtResource("9_joy0e")
text = "Brelan"

[node name="Carre" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 625.0
offset_top = 175.0
offset_right = 775.0
offset_bottom = 275.0
theme = ExtResource("9_joy0e")
text = "Carré"

[node name="Full" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 25.0
offset_top = 325.0
offset_right = 175.0
offset_bottom = 425.0
theme = ExtResource("9_joy0e")
text = "Full"

[node name="PSuite" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 225.0
offset_top = 325.0
offset_right = 375.0
offset_bottom = 425.0
theme = ExtResource("9_joy0e")
text = "Petite Suite"

[node name="GSuite" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 425.0
offset_top = 325.0
offset_right = 575.0
offset_bottom = 425.0
theme = ExtResource("9_joy0e")
text = "Grande Suite"

[node name="Chance" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 625.0
offset_top = 325.0
offset_right = 775.0
offset_bottom = 425.0
theme = ExtResource("9_joy0e")
text = "Chance
"

[node name="Yams" type="Button" parent="CanvasLayer/Coups"]
layout_mode = 1
offset_left = 250.0
offset_top = 475.0
offset_right = 550.0
offset_bottom = 575.0
theme = ExtResource("9_joy0e")
text = "Yams"

[connection signal="pressed" from="CanvasLayer/RollButton" to="." method="_on_roll_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Total1" to="." method="_on_total_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Total2" to="." method="_on_total_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Total3" to="." method="_on_total_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Total4" to="." method="_on_total_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Total5" to="." method="_on_total_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Total6" to="." method="_on_total_6_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Brelan" to="." method="_on_brelan_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Carre" to="." method="_on_carre_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Full" to="." method="_on_full_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/PSuite" to="." method="_on_p_suite_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/GSuite" to="." method="_on_g_suite_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Chance" to="." method="_on_chance_pressed"]
[connection signal="pressed" from="CanvasLayer/Coups/Yams" to="." method="_on_yams_pressed"]
